--- a/src/App.css
+++ b/src/App.css
@@ -276,3 +276,61 @@
   letter-spacing: 1px;
   padding: 20px;
 }
+
+.aboutMeTitle {
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  color: var(--dark-blue);
+  text-align: center;
+  margin: 20px;
+  letter-spacing: 1px;
+  padding: 20px;
+}
+
+.aboutMeText {
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 18px;
+  /* margin-top: 10px;
+  margin-left: 20%; */
+  padding: 20px;
+  color: var(--light-green);
+  width: 250px;
+  border: 1px solid var(--dark-blue);
+  border-radius: 4px;
+  text-align:center;
+  height: 300px;
+  margin-left: 80px;
+}
+
+.aboutMeText2 {
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-size: 30px;
+  /* margin-top: 10px;
+  margin-right: 10%; */
+  padding: 20px;
+  color: var(--light-green);
+  width: 310px;
+  border: 1px solid var(--dark-blue);
+  border-radius: 40px;
+  text-align:center;
+  height: 250px;
+}
+
+.profilePic {
+  width: 450px;
+  height: 550px;
+  border-radius: 50%;
+  border: 1px solid var(--dark-blue);
+  /* margin-right: 10%; */
+  margin-top: -120px;
+}
+
+.aboutContainer {
+  /* display: flex;
+  flex-direction: row-reverse;
+  justify-content: center;
+  align-items: center;
+  margin-top: 100px; */
+  display: flex;
+  justify-content: space-around;
+  margin-left: 90px;
+}
