--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,6 @@
 
 .App {
   text-align: center;
-  
 }
 
 .App-logo {
@@ -57,6 +56,8 @@
   width: 100%;
   background-color: var(--light-blue);
   padding: 20px;
+  /* margin-top:auto;
+  height: -50px; */
 }
 
 @keyframes App-logo-spin {
@@ -106,9 +107,9 @@
   font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
 
-.contactContaier{
+.contactContainer{
   font-family:Verdana, Geneva, Tahoma, sans-serif;
-
+  margin-top: -50px;
 }
 
 .contactForm{
@@ -116,6 +117,7 @@
   padding: 20px;
   display: grid;
   place-items: center;
+ 
 }
 
 .copyright {
@@ -198,7 +200,7 @@
 
 .resume {
   text-align: center;
-  margin-top: 150px;
+  margin-top: 90px;
 }
 
 .listTitle {
@@ -230,8 +232,8 @@
 }
 
 .projectImg{
-  width: 300px;
-  height: 200px;
+  width: 400px;
+  height: 300px;
   margin: 10px;
   border: 1px solid var(--dark-blue);
   border-radius: 4px;
@@ -240,17 +242,20 @@
 .projectFigure {
   display: flex;
   flex-direction: column;
+  flex-wrap: nowrap;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   margin: 10px;
   margin-top: 100px;
+  margin-left: 80px;
+  margin-bottom: 120px;
   padding: 10px;
   border-radius: 4px;
-  width: 300px;
-  height: 300px;
+  width: 400px;
+  height: 400px;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   color: var(--dark-blue);
-  font-size: 20px;
+  font-size: 25px;
   letter-spacing: 2px;
   float: left;
 }
